--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -22,7 +22,8 @@
                 android:layout_height="@dimen/album_cover_height"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                android:padding="15dp"/>
 
             <TextView
                 android:id="@+id/title"
@@ -32,30 +33,23 @@
                 android:paddingLeft="@dimen/album_title_padding"
                 android:paddingRight="@dimen/album_title_padding"
                 android:paddingTop="@dimen/album_title_padding"
-                android:textColor="@color/album_title"
                 android:textSize="@dimen/album_title"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                style="@style/headerTextPrimary"
+                android:textColor="@color/colorPrimaryDark"
+                />
 
             <TextView
-                android:id="@+id/count"
+                android:id="@+id/idofpost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title"
                 android:paddingBottom="@dimen/songs_count_padding_bottom"
                 android:paddingLeft="@dimen/album_title_padding"
                 android:paddingRight="@dimen/album_title_padding"
-                android:textSize="@dimen/songs_count"
-                android:textAlignment="center"/>
-
-<!--            <ImageView-->
-<!--                android:id="@+id/overflow"-->
-<!--                android:layout_width="@dimen/ic_album_overflow_width"-->
-<!--                android:layout_height="@dimen/ic_album_overflow_height"-->
-<!--                android:layout_alignParentRight="true"-->
-<!--                android:layout_below="@id/thumbnail"-->
-<!--                android:layout_marginTop="@dimen/ic_album_overflow_margin_top"-->
-<!--                android:scaleType="centerCrop"-->
-<!--                android:src="@drawable/ic_dots" />-->
+                android:textSize="5dp"
+                android:textAlignment="center"
+                android:textColor="@color/whiteTextColor"/>
 
         </RelativeLayout>
 
