--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F50057</color>
-    <color name="colorPrimaryDark">#F50057</color>
-    <color name="colorAccent">#FF4081</color>
+<!--    <color name="colorPrimary">#F50057</color>-->
+<!--    <color name="colorPrimaryDark">#F50057</color>-->
+<!--    <color name="colorAccent">#FF4081</color>-->
+    <color name="colorPrimary">#8FADC3</color>
+    <color name="colorPrimaryDark">#7C9BB1</color>
+<!--    <color name="colorAccent">#D81B60</color>-->
+        <color name="colorAccent">#DA667FA5</color>
+
     <color name="viewBg">#f1f5f8</color>
     <color name="album_title">#4c4c4c</color>
     <color name="loginBkColor">#f0f0f0</color>
@@ -10,5 +15,9 @@
     <color name="whiteCardColor">#fff</color>
     <color name="primaryTextColor">#00A5FF</color>
     <color name="whiteTextColor">#FFFFFF</color>
+    <color name="gray">#9E9999</color>
+
+    <color name="postbg">#eaeaea</color>
+
 
 </resources>
